style: fixed sizes on mobile devices

--- a/src/components/MenuScreen.module.scss
+++ b/src/components/MenuScreen.module.scss
@@ -19,8 +19,9 @@
   position: relative;
 
   @media (max-width: 768px) {
+    min-height: 70vh;
     max-width: 90%;
-    padding: 0rem;
+    padding: 1rem;
     overflow: hidden;
     gap: 1.5rem;
   }
@@ -29,6 +30,10 @@
     color: #d0a77b;
     font-size: 3rem;
     margin-bottom: 0;
+
+    @media (max-width: 768px) {
+      font-size: 2rem;
+    }
   }
 
   &__button {
@@ -39,5 +44,10 @@
     width: 65%;
     padding: 2rem;
     font-size: 2rem;
+
+    @media (max-width: 768px) {
+      font-size: 1rem;
+      padding: 1rem;
+    }
   }
 }
